Working on specific image display and overlays. Need to fix the gap at the bottom of images on cards

--- a/development/scss/scss-grid/_grid-columns.scss
+++ b/development/scss/scss-grid/_grid-columns.scss
@@ -95,9 +95,17 @@
 .grid-wrapper-min-max.three-column-nine-column,
 .grid-wrapper-min-max.nine-column-three-column {
   grid-gap: 2rem;
+  .grid-item {
+    :last-of-type {
+      margin-bottom: 0 !important;
+    }
+  }
   @include phone-portrait {
     .grid-item {
       margin: 1rem 0 !important;
+      &:last-of-type {
+        margin-bottom: 0 !important;
+      }
     }
   }
 }
