--- a/development/scss/scss-panels/_accessible-modaal-aria.scss
+++ b/development/scss/scss-panels/_accessible-modaal-aria.scss
@@ -300,6 +300,7 @@
 
 .modaal-gallery-item img {
 	display: block;
+	width: 100%;
 }
 
 .modaal-gallery-item.is_active {
