--- a/development/scss/scss-panels/_accessible-tabs-aria.scss
+++ b/development/scss/scss-panels/_accessible-tabs-aria.scss
@@ -50,6 +50,7 @@
   padding: 2em;
   img {
     margin: 0 0 2rem 0 !important;
+    width: 100%;
   }
   h4 {
     display: inline-block;
